<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_start_cellId"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/start"
        android:textColor="#FFFFFF"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_margin="10dp"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/cellId"

            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:textSize="20sp"
            android:id="@+id/text_cellId"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">


    <EditText
        android:id="@+id/edit_text_n"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/number_of_n_samples"
        android:textSize="14dp"
        android:inputType="number"
        android:layout_width="0dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/confirm"
            android:id="@+id/btn_confirm"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

    <EditText
        android:id="@+id/edit_text_m"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/number_of_m_samples"
        android:textSize="14dp"
        android:inputType="number"
        android:layout_width="0dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.75"
        android:text="@string/clear_list"
        android:id="@+id/btn_clear"
        />
    </LinearLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_start_rssi"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/start_measurement"
        android:textColor="#FFFFFF"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_stations_count"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_location"
        android:gravity="center"
        android:text="Your location: "/>






</LinearLayout>
